--- a/package.json
+++ b/package.json
@@ -8,11 +8,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.12",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "axios": "^0.24.0",
+    "framer-motion": "^4",
     "next": "12.0.3",
+    "papaparse": "^5.3.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/node": "^16.11.6",
+    "@types/papaparse": "^5.3.1",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
     "eslint": "7",
     "eslint-config-next": "12.0.3"
   }
